--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "antd": "^5.24.0",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "font-awesome": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
