--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@ant-design/icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "antd": "^5.24.0",
+    "antd": "^5.24.4",
+    "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
