--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.2.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.10.9",
