--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.6.2",
@@ -18,6 +19,7 @@
     "react": "^19.0.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
