--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.12.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.10.9",
