--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-pdf/renderer": "^4.3.0",
     "antd": "^5.24.4",
+    "antd-phone-input": "^0.3.14",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
